DTO models created

--- a/app/src/main/assets/local_construction.properties
+++ b/app/src/main/assets/local_construction.properties
@@ -2,4 +2,4 @@ user.name=WhatToDoNow
 # user.password=Up7A8q3WXn2z3Whv6cRkAeJn95vChqXyrcZnZdWMHJszd9Qp6T3mRhQ
 user.password=LetsBeginItAgain
 pref.name=i_build_cities
-base.url=https://tamil-bible.onrender.com/
+base.url=https://local-construction.onrender.com
