--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,14 +72,10 @@ dependencies {
     def koin_version = "3.2.0"
     implementation "io.insert-koin:koin-android:$koin_version"
     implementation "io.insert-koin:koin-android-compat:$koin_version"
-    implementation "io.insert-koin:koin-androidx-workmanager:$koin_version"
     implementation "io.insert-koin:koin-androidx-navigation:$koin_version"
 
     //coroutine
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-
-    def work_version = "2.8.0"
-    implementation "androidx.work:work-runtime-ktx:$work_version"
 
     // network call
     def ok_http_3_version = "4.9.0"
@@ -93,11 +89,9 @@ dependencies {
     // serializer / deserializer
     implementation 'com.google.code.gson:gson:2.9.1'
 
-    //room database
-    def room_version = "2.5.0"
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    // image Loading
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    kapt 'com.github.bumptech.glide:compiler:4.13.0'
 
     def sheetsVersion = "2.3.1"
     implementation "com.maxkeppeler.sheets:color:${sheetsVersion}"
