--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,19 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.devtools.ksp'
     id 'kotlin-kapt'
 }
 
 android {
     namespace 'com.chillminds.local_construction'
-    compileSdk 33
+    compileSdk 35
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.chillminds.local_construction"
         minSdk 23
-        targetSdk 33
+        targetSdk 35
         versionCode 8
         versionName "1.0.7"
         multiDexEnabled true
@@ -42,19 +43,19 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.core:core-ktx:1.15.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
 
     // Navigation Component
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.9'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.8.9'
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.4.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.intuit.sdp:sdp-android:1.1.1'
 
     //security (Shared Preference)
     implementation "androidx.security:security-crypto:1.0.0"
@@ -64,7 +65,7 @@ dependencies {
     implementation "androidx.multidex:multidex:$multidex_version"
 
     // binding support
-    def lifecycle_version = "2.6.1"
+    def lifecycle_version = "2.8.7"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
@@ -75,7 +76,7 @@ dependencies {
     implementation "io.insert-koin:koin-androidx-navigation:$koin_version"
 
     //coroutine
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1'
 
     def permission_version = "4.9.2"
     implementation "com.github.permissions-dispatcher:permissionsdispatcher:${permission_version}"
@@ -84,16 +85,16 @@ dependencies {
     implementation 'com.github.Yabaze:Android-XML-to-PDF-Generator:V1.0.0'
 
     // network call
-    def ok_http_3_version = "4.9.0"
-    def retrofit_version = "2.9.0"
+    def ok_http_3_version = "4.12.0"
+    def retrofit_version = "2.11.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$ok_http_3_version"
     implementation "com.squareup.okhttp3:okhttp:$ok_http_3_version"
-    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
+    implementation "com.squareup.retrofit2:converter-scalars:$retrofit_version"
 
     // serializer / deserializer
-    implementation 'com.google.code.gson:gson:2.9.1'
+    implementation 'com.google.code.gson:gson:2.11.0'
 
     // image Loading
     implementation 'com.github.bumptech.glide:glide:4.13.0'
@@ -107,9 +108,9 @@ dependencies {
     implementation "com.maxkeppeler.sheets:calendar:${sheetsVersion}"
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 
-    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.22"))
 
 }
