--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,8 +97,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.11.0'
 
     // image Loading
-    implementation 'com.github.bumptech.glide:glide:4.13.0'
-    kapt 'com.github.bumptech.glide:compiler:4.13.0'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    ksp 'com.github.bumptech.glide:ksp:4.16.0'
 
     def sheetsVersion = "2.3.1"
     // implementation "com.maxkeppeler.sheets:color:${sheetsVersion}"
